--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "class-methods-use-this": "off",
         "no-unused-vars": "warn",
         "no-plusplus": "off",
-        "no-mixed-operators": "off"
+        "no-mixed-operators": "off",
+        "no-bitwise": "off"
     }
 }
