--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "no-unused-vars": "warn",
         "no-plusplus": "off",
         "no-mixed-operators": "off",
-        "no-bitwise": "off"
+        "no-bitwise": "off",
+        "no-restricted-syntax": "off"
     }
 }
