--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "nodemon --exec babel-node -- ./test/index.js",
+    "test": "NODE_ENV=development nodemon --watch src -e ts,tsx --exec ts-node ./test/index.ts",
     "build": "babel src/ --out-dir build/"
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "flow-bin": "^0.72.0",
-    "prettier-eslint": "^8.8.1"
-  }
+    "@types/node": "^12.7.5",
+    "typescript": "^3.6.3"
+  },
+  "dependencies": {}
 }
